fix: row-gap in medium windows and up

--- a/packages/css/src/components/description-list/description-list.scss
+++ b/packages/css/src/components/description-list/description-list.scss
@@ -19,6 +19,10 @@
   font-size: var(--ams-description-list-font-size);
   line-height: var(--ams-description-list-line-height);
 
+  @media screen and (min-width: $ams-breakpoint-medium) {
+    row-gap: var(--ams-description-list-row-gap);
+  }
+
   @include hyphenation;
   @include text-rendering;
 }
